Moved docker to compute. Added docker login directory (for the cluster login node inside docker).

--- a/slurm/slurm.conf
+++ b/slurm/slurm.conf
@@ -54,7 +54,7 @@ SlurmUser=slurm
 #SlurmdUser=root 
 #SrunEpilog=
 #SrunProlog=
-StateSaveLocation=/tmp
+StateSaveLocation=/var/slurm/
 SwitchType=switch/none
 #TaskEpilog=
 TaskPlugin=task/none
