--- a/compute/supervisord.conf
+++ b/compute/supervisord.conf
@@ -5,4 +5,4 @@ nodaemon=true
 command=/usr/sbin/sshd -D
 
 [program:slurm]
-command=/usr/local/sbin/slurmd -D
+command=/usr/local/sbin/slurmd -D -f /cluster/etc/slurm.conf
