--- a/compute/supervisord.conf
+++ b/compute/supervisord.conf
@@ -6,3 +6,7 @@ command=/usr/sbin/sshd -D
 
 [program:slurm]
 command=/usr/local/sbin/slurmd -D -f /cluster/etc/slurm.conf
+
+[program:munged]
+command=/usr/sbin/munged -F --key-file /cluster/etc/munge/munge.key
+user=munge
