--- a/login/supervisord.conf
+++ b/login/supervisord.conf
@@ -7,3 +7,6 @@ command=/usr/sbin/sshd -D
 [program:slurm]
 command=/usr/local/sbin/slurmctld -D -f /cluster/etc/slurm.conf
 
+[program:munged]
+command=/usr/sbin/munged -F --key-file /cluster/etc/munge/munge.key
+user=munge
