Changed start and stop script to use the same gw IP address for all nodes.

--- a/compute/supervisord.conf
+++ b/compute/supervisord.conf
@@ -1,6 +1,10 @@
 [supervisord]
 nodaemon=true
 
+[program:ldconfig]
+command=/sbin/ldconfig /usr/local/lib
+startsecs=0
+
 [program:syslog]
 command=/sbin/rsyslogd -dn
 
