--- a/slurm/slurm.conf
+++ b/slurm/slurm.conf
@@ -134,9 +134,9 @@ JobCompType=jobcomp/none
 JobAcctGatherFrequency=30
 JobAcctGatherType=jobacct_gather/none
 SlurmctldDebug=3
-#SlurmctldLogFile=
+SlurmctldLogFile=/var/log/slurmctld.log
 SlurmdDebug=3
-#SlurmdLogFile=
+SlurmdLogFile=/var/log/slurmd.log
 #SlurmSchedLogFile= 
 #SlurmSchedLogLevel= 
 # 
