Changed slurm configuration to allow for repartitioning and generating a default list of cluster nodes.

--- a/login/supervisord.conf
+++ b/login/supervisord.conf
@@ -8,7 +8,7 @@ command=/sbin/rsyslogd -dn
 command=/usr/sbin/sshd -D
 
 [program:slurm]
-command=/usr/local/sbin/slurmctld -D -f /cluster/etc/slurm.conf
+command=/usr/local/sbin/slurmctld -D -f /usr/local/etc/slurm.conf
 
 [program:munged]
 command=/usr/sbin/munged -F --key-file /cluster/etc/munge/munge.key
