--- a/compute/supervisord.conf
+++ b/compute/supervisord.conf
@@ -12,7 +12,7 @@ command=/sbin/rsyslogd -dn
 command=/usr/sbin/sshd -D
 
 [program:slurm]
-command=/usr/local/sbin/slurmd -D -f /cluster/etc/slurm.conf
+command=/usr/local/sbin/slurmd -D -f /usr/local/etc/slurm.conf
 
 [program:munged]
 command=/usr/sbin/munged -F --key-file /cluster/etc/munge/munge.key
