--- a/openstack/docker/nova-controller/nova.conf
+++ b/openstack/docker/nova-controller/nova.conf
@@ -11,11 +11,12 @@ libvirt_nonblocking = True
 libvirt_inject_partition = -1
 network_manager = nova.network.manager.FlatDHCPManager
 iscsi_helper = tgtadm
-sql_connection = mysql://nova:nova@localhost/nova
+sql_connection = mysql://nova@cntroller/nova
 compute_driver = libvirt.LibvirtDriver
 firewall_driver = nova.virt.libvirt.firewall.IptablesFirewallDriver
 rpc_backend = nova.openstack.common.rpc.impl_qpid
 rootwrap_config = /etc/nova/rootwrap.conf
+qpid_hostname = controller
 
 [keystone_authtoken]
 admin_tenant_name = %SERVICE_TENANT_NAME%
