--- a/openstack/docker/nova-compute/nova.conf
+++ b/openstack/docker/nova-compute/nova.conf
@@ -11,18 +11,20 @@ libvirt_nonblocking = True
 libvirt_inject_partition = -1
 network_manager = nova.network.manager.FlatDHCPManager
 iscsi_helper = tgtadm
-sql_connection = mysql://nova@cntroller/nova
+sql_connection = mysql://nova@controller/nova
 compute_driver = libvirt.LibvirtDriver
 firewall_driver = nova.virt.libvirt.firewall.IptablesFirewallDriver
 rpc_backend = nova.openstack.common.rpc.impl_qpid
 rootwrap_config = /etc/nova/rootwrap.conf
 qpid_hostname = controller
+glance_host = controller
 
 [keystone_authtoken]
 admin_tenant_name = %SERVICE_TENANT_NAME%
 admin_user = %SERVICE_USER%
 admin_password = %SERVICE_PASSWORD%
-auth_host = 127.0.0.1
+auth_host = controller
 auth_port = 35357
 auth_protocol = http
+auth_uri = http://controller:5000/v2.0
 signing_dir = /tmp/keystone-signing-nova
