--- a/openstack/docker/nova/nova.conf
+++ b/openstack/docker/nova/nova.conf
@@ -13,16 +13,25 @@ network_manager = nova.network.manager.FlatDHCPManager
 iscsi_helper = tgtadm
 sql_connection = mysql://nova@controller/nova
 compute_driver = libvirt.LibvirtDriver
-firewall_driver = nova.virt.libvirt.firewall.IptablesFirewallDriver
 rpc_backend = nova.openstack.common.rpc.impl_qpid
 rootwrap_config = /etc/nova/rootwrap.conf
 qpid_hostname = controller
 glance_host = controller
+network_api_class = nova.network.neutronv2.api.API
+neutron_url = http://controller:9696
+neutron_auth_strategy = keystone
+neutron_admin_tenant_name = service
+neutron_admin_username = neutron
+neutron_admin_password = neutron
+neutron_admin_auth_url = http://controller:35357/v2.0
+linuxnet_interface_driver = nova.network.linux_net.LinuxOVSInterfaceDriver
+firewall_driver = nova.virt.firewall.NoopFirewallDriver
+security_group_api = neutron
 
 [keystone_authtoken]
-admin_tenant_name = %SERVICE_TENANT_NAME%
-admin_user = %SERVICE_USER%
-admin_password = %SERVICE_PASSWORD%
+admin_tenant_name = service
+admin_user = nova
+admin_password = nova
 auth_host = controller
 auth_port = 35357
 auth_protocol = http
