--- a/compute/supervisord.conf
+++ b/compute/supervisord.conf
@@ -13,6 +13,7 @@ command=/usr/sbin/sshd -D
 
 [program:slurm]
 command=/usr/local/sbin/slurmd -D -f /cluster/etc/slurm.conf
+user=slurm
 
 [program:munged]
 command=/usr/sbin/munged -F --key-file /cluster/etc/munge/munge.key
