--- a/login/supervisord.conf
+++ b/login/supervisord.conf
@@ -9,6 +9,7 @@ command=/usr/sbin/sshd -D
 
 [program:slurm]
 command=/usr/local/sbin/slurmctld -D -f /cluster/etc/slurm.conf
+user=slurm
 
 [program:munged]
 command=/usr/sbin/munged -F --key-file /cluster/etc/munge/munge.key
