Added supervisorctld to images.

--- a/compute/supervisord.conf
+++ b/compute/supervisord.conf
@@ -1,5 +1,15 @@
 [supervisord]
 nodaemon=true
+logfile=/var/log/supervisord.log
+pidfile=/var/run/supervisord.pid
+
+[inet_http_server]
+port=9001
+
+[supervisorctl]
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:ldconfig]
 command=/sbin/ldconfig /usr/local/lib
