--- a/login/supervisord.conf
+++ b/login/supervisord.conf
@@ -1,5 +1,15 @@
 [supervisord]
 nodaemon=true
+logfile=/var/log/supervisord.log
+pidfile=/var/run/supervisord.pid
+
+[inet_http_server]
+port=9001
+
+[supervisorctl]
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:syslog]
 command=/sbin/rsyslogd -dn
@@ -9,7 +19,6 @@ command=/usr/sbin/sshd -D
 
 [program:slurm]
 command=/usr/local/sbin/slurmctld -D -f /cluster/etc/slurm.conf
-user=slurm
 
 [program:munged]
 command=/usr/sbin/munged -F --key-file /cluster/etc/munge/munge.key
