--- a/openstack/templates/slurm-nodes.conf
+++ b/openstack/templates/slurm-nodes.conf
@@ -3,6 +3,9 @@
 {% for core in cores %}
 NodeName={{cores[core]}} CPUs={{core}} State=UNKNOWN 
 {% endfor %}
+PartitionName=Compute Nodes={{compute}} Default=YES
 {% for cat in categories %}
 PartitionName={{cat}} Nodes={{categories[cat]}} 
 {% endfor %}
+
+
